--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&display=swap" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/a9922fb2e8.js" crossorigin="anonymous"></script>
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 		<style>
@@ -11,6 +15,7 @@
 				width: 100%;
 				height: 100%;
 				margin: 0;
+				font-family: 'Lato', sans-serif;
 			}
 
 			html {
